argo/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflow

spec:
  entryPoints:
    - websecure
  tls:
    secretName: argo-workflows-tls
  routes:
    - kind: Rule
      match: Host(`argo.kentaro1043.com`)
      middlewares:
        - name: argo-auth
      services:
        - kind: Service
          name: argo-workflows-server
          port: 2746
